# SDL-Asteroids

./: CMakeLists.txt  Readme.txt
include/: GameScene.h  InputManager.h  MenuScene.h  SDLmath.h  SceneManager.h  asteroid.h  bullet.h  game.h  gameObject.h  globals.h  scene.h  ship.h
src/: GameScene.cpp  InputManager.cpp  MenuScene.cpp  asteroid.cpp  bullet.cpp  main.cpp  ship.cpp
